McFuncDSL/McFuncDSLParser.py
# Generated from E:/python/minecraft-datapack-language/antlr/McFuncDSL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class McFuncDSLParser ( Parser ):

    grammarFileName = "McFuncDSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'import'", "'@'", "'constructor'", "'method'", 
                     "':'", "'inline'", "'()'", "'const'", "'.'", "'<='", 
                     "'>='", "'cmd'", "'!'", "'int'", "'string'", "'boolean'", 
                     "'void'", "'any'", "'Selector'", "'('", "')'", "'{'", 
                     "'}'", "';'", "','", "'func'", "'class'", "'interface'", 
                     "'extends'", "'implements'", "'var'", "'return'", "'for'", 
                     "'while'", "'if'", "'else'", "'new'", "'true'", "'false'", 
                     "'null'", "'in'", "'->'", "'::'", "'*'", "'/'", "'+'", 
                     "'-'", "'>'", "'<'", "'!='", "'=='", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "TYPE_INT", "TYPE_STRING", 
                      "TYPE_BOOLEAN", "TYPE_VOID", "TYPE_ANY", "TYPE_SELECTOR", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "SEMI", "COMMA", 
                      "FUNC", "CLASS", "INTERFACE", "EXTENDS", "IMPLEMENTS", 
                      "VAR", "RETURN", "FOR", "WHILE", "IF", "ELSE", "NEW", 
                      "TRUE", "FALSE", "NULL", "IN", "ARROW", "DOUBLE_COLON", 
                      "MUL", "DIV", "ADD", "SUB", "GT", "LT", "NEQ", "EQ", 
                      "ASSIGN", "NUMBER", "STRING", "FSTRING", "ID", "WS", 
                      "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_importStmt = 1
    RULE_annotation = 2
    RULE_classDecl = 3
    RULE_interfaceDecl = 4
    RULE_constructorDecl = 5
    RULE_interfaceMethodDecl = 6
    RULE_type = 7
    RULE_typeList = 8
    RULE_primitiveType = 9
    RULE_functionDecl = 10
    RULE_methodDecl = 11
    RULE_paramList = 12
    RULE_paramDecl = 13
    RULE_block = 14
    RULE_statement = 15
    RULE_forStmt = 16
    RULE_forControl = 17
    RULE_whileStmt = 18
    RULE_constDecl = 19
    RULE_varDeclaration = 20
    RULE_varDecl = 21
    RULE_forLoopVarDecl = 22
    RULE_assignment = 23
    RULE_returnStmt = 24
    RULE_ifStmt = 25
    RULE_expr = 26
    RULE_primary = 27
    RULE_cmdExpr = 28
    RULE_argumentList = 29
    RULE_exprList = 30
    RULE_literal = 31

    ruleNames =  [ "program", "importStmt", "annotation", "classDecl", "interfaceDecl", 
                   "constructorDecl", "interfaceMethodDecl", "type", "typeList", 
                   "primitiveType", "functionDecl", "methodDecl", "paramList", 
                   "paramDecl", "block", "statement", "forStmt", "forControl", 
                   "whileStmt", "constDecl", "varDeclaration", "varDecl", 
                   "forLoopVarDecl", "assignment", "returnStmt", "ifStmt", 
                   "expr", "primary", "cmdExpr", "argumentList", "exprList", 
                   "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    TYPE_INT=14
    TYPE_STRING=15
    TYPE_BOOLEAN=16
    TYPE_VOID=17
    TYPE_ANY=18
    TYPE_SELECTOR=19
    LPAREN=20
    RPAREN=21
    LBRACE=22
    RBRACE=23
    SEMI=24
    COMMA=25
    FUNC=26
    CLASS=27
    INTERFACE=28
    EXTENDS=29
    IMPLEMENTS=30
    VAR=31
    RETURN=32
    FOR=33
    WHILE=34
    IF=35
    ELSE=36
    NEW=37
    TRUE=38
    FALSE=39
    NULL=40
    IN=41
    ARROW=42
    DOUBLE_COLON=43
    MUL=44
    DIV=45
    ADD=46
    SUB=47
    GT=48
    LT=49
    NEQ=50
    EQ=51
    ASSIGN=52
    NUMBER=53
    STRING=54
    FSTRING=55
    ID=56
    WS=57
    LINE_COMMENT=58
    BLOCK_COMMENT=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(McFuncDSLParser.EOF, 0)

        def importStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(McFuncDSLParser.ImportStmtContext)
            else:
                return self.getTypedRuleContext(McFuncDSLParser.ImportStmtContext,i)


        def functionDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(McFuncDSLParser.FunctionDeclContext)
            else:
                return self.getTypedRuleContext(McFuncDSLParser.FunctionDeclContext,i)


        def classDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(McFuncDSLParser.ClassDeclContext)
            else:
                return self.getTypedRuleContext(McFuncDSLParser.ClassDeclContext,i)


        def interfaceDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(McFuncDSLParser.InterfaceDeclContext)
            else:
                return self.getTypedRuleContext(McFuncDSLParser.InterfaceDeclContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(McFuncDSLParser.StatementContext)
            else:
                return self.getTypedRuleContext(McFuncDSLParser.StatementContext,i)


        def getRuleIndex(self):
            return McFuncDSLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = McFuncDSLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 135249755429146950) != 0):
                self.state = 69
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 64
                    self.importStmt()
                    pass

                elif la_ == 2:
                    self.state = 65
                    self.functionDecl()
                    pass

                elif la_ == 3:
                    self.state = 66
                    self.classDecl()
                    pass

                elif la_ == 4:
                    self.state = 67
                    self.interfaceDecl()
                    pass

                elif la_ == 5:
                    self.state = 68
                    self.statement()
                    pass


                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 74
            self.match(McFuncDSLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(McFuncDSLParser.STRING, 0)

        def SEMI(self):
            return self.getToken(McFuncDSLParser.SEMI, 0)

        def getRuleIndex(self):
            return McFuncDSLParser.RULE_importStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportStmt" ):
                listener.enterImportStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportStmt" ):
                listener.exitImportStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportStmt" ):
                return visitor.visitImportStmt(self)
            else:
                return visitor.visitChildren(self)




    def importStmt(self):

        localctx = McFuncDSLParser.ImportStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_importStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(McFuncDSLParser.T__0)
            self.state = 77
            self.match(McFuncDSLParser.STRING)
            self.state = 78
            self.match(McFuncDSLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AnnotationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(McFuncDSLParser.ID, 0)

        def getRuleIndex(self):
            return McFuncDSLParser.RULE_annotation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnnotation" ):
                listener.enterAnnotation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnnotation" ):
                listener.exitAnnotation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnnotation" ):
                return visitor.visitAnnotation(self)
            else:
                return visitor.visitChildren(self)




    def annotation(self):

        localctx = McFuncDSLParser.AnnotationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_annotation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(McFuncDSLParser.T__1)
            self.state = 81
            self.match(McFuncDSLParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(McFuncDSLParser.CLASS, 0)

        def ID(self):
            return self.getToken(McFuncDSLParser.ID, 0)

        def LBRACE(self):
            return self.getToken(McFuncDSLParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(McFuncDSLParser.RBRACE, 0)

        def annotation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(McFuncDSLParser.AnnotationContext)
            else:
                return self.getTypedRuleContext(McFuncDSLParser.AnnotationContext,i)


        def EXTENDS(self):
            return self.getToken(McFuncDSLParser.EXTENDS, 0)

        def type_(self):
            return self.getTypedRuleContext(McFuncDSLParser.TypeContext,0)


        def IMPLEMENTS(self):
            return self.getToken(McFuncDSLParser.IMPLEMENTS, 0)

        def typeList(self):
            return self.getTypedRuleContext(McFuncDSLParser.TypeListContext,0)


        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(McFuncDSLParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(McFuncDSLParser.VarDeclContext,i)


        def constDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(McFuncDSLParser.ConstDeclContext)
            else:
                return self.getTypedRuleContext(McFuncDSLParser.ConstDeclContext,i)


        def methodDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(McFuncDSLParser.MethodDeclContext)
            else:
                return self.getTypedRuleContext(McFuncDSLParser.MethodDeclContext,i)


        def constructorDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(McFuncDSLParser.ConstructorDeclContext)
            else:
                return self.getTypedRuleContext(McFuncDSLParser.ConstructorDeclContext,i)


        def getRuleIndex(self):
            return McFuncDSLParser.RULE_classDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDecl" ):
                listener.enterClassDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDecl" ):
                listener.exitClassDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDecl" ):
                return visitor.visitClassDecl(self)
            else:
                return visitor.visitChildren(self)




    def classDecl(self):

        localctx = McFuncDSLParser.ClassDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_classDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 83
                self.annotation()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 89
            self.match(McFuncDSLParser.CLASS)
            self.state = 90
            self.match(McFuncDSLParser.ID)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 91
                self.match(McFuncDSLParser.EXTENDS)
                self.state = 92
                self.type_()


            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==30:
                self.state = 95
                self.match(McFuncDSLParser.IMPLEMENTS)
                self.state = 96
                self.typeList()


            self.state = 99
            self.match(McFuncDSLParser.LBRACE)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2147483932) != 0):
                self.state = 104
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 100
                    self.varDecl()
                    pass

                elif la_ == 2:
                    self.state = 101
                    self.constDecl()
                    pass

                elif la_ == 3:
                    self.state = 102
                    self.methodDecl()
                    pass

                elif la_ == 4:
                    self.state = 103
                    self.constructorDecl()
                    pass


                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 109
            self.match(McFuncDSLParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InterfaceDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTERFACE(self):
            return self.getToken(McFuncDSLParser.INTERFACE, 0)

        def ID(self):
            return self.getToken(McFuncDSLParser.ID, 0)

        def LBRACE(self):
            return self.getToken(McFuncDSLParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(McFuncDSLParser.RBRACE, 0)

        def annotation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(McFuncDSLParser.AnnotationContext)
            else:
                return self.getTypedRuleContext(McFuncDSLParser.AnnotationContext,i)


        def EXTENDS(self):
            return self.getToken(McFuncDSLParser.EXTENDS, 0)

        def type_(self):
            return self.getTypedRuleContext(McFuncDSLParser.TypeContext,0)


        def interfaceMethodDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(McFuncDSLParser.InterfaceMethodDeclContext)
            else:
                return self.getTypedRuleContext(McFuncDSLParser.InterfaceMethodDeclContext,i)


        def getRuleIndex(self):
            return McFuncDSLParser.RULE_interfaceDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterfaceDecl" ):
                listener.enterInterfaceDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterfaceDecl" ):
                listener.exitInterfaceDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterfaceDecl" ):
                return visitor.visitInterfaceDecl(self)
            else:
                return visitor.visitChildren(self)




    def interfaceDecl(self):

        localctx = McFuncDSLParser.InterfaceDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_interfaceDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 111
                self.annotation()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self.match(McFuncDSLParser.INTERFACE)
            self.state = 118
            self.match(McFuncDSLParser.ID)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 119
                self.match(McFuncDSLParser.EXTENDS)
                self.state = 120
                self.type_()


            self.state = 123
            self.match(McFuncDSLParser.LBRACE)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2 or _la==4:
                self.state = 124
                self.interfaceMethodDecl()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 130
            self.match(McFuncDSLParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramList(self):
            return self.getTypedRuleContext(McFuncDSLParser.ParamListContext,0)


        def block(self):
            return self.getTypedRuleContext(McFuncDSLParser.BlockContext,0)


        def annotation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(McFuncDSLParser.AnnotationContext)
            else:
                return self.getTypedRuleContext(McFuncDSLParser.AnnotationContext,i)


        def getRuleIndex(self):
            return McFuncDSLParser.RULE_constructorDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstructorDecl" ):
                listener.enterConstructorDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstructorDecl" ):
                listener.exitConstructorDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstructorDecl" ):
                return visitor.visitConstructorDecl(self)
            else:
                return visitor.visitChildren(self)




    def constructorDecl(self):

        localctx = McFuncDSLParser.ConstructorDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_constructorDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 132
                self.annotation()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 138
            self.match(McFuncDSLParser.T__2)
            self.state = 139
            self.paramList()
            self.state = 140
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InterfaceMethodDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(McFuncDSLParser.ID, 0)

        def paramList(self):
            return self.getTypedRuleContext(McFuncDSLParser.ParamListContext,0)


        def SEMI(self):
            return self.getToken(McFuncDSLParser.SEMI, 0)

        def type_(self):
            return self.getTypedRuleContext(McFuncDSLParser.TypeContext,0)


        def annotation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(McFuncDSLParser.AnnotationContext)
            else:
                return self.getTypedRuleContext(McFuncDSLParser.AnnotationContext,i)


        def getRuleIndex(self):
            return McFuncDSLParser.RULE_interfaceMethodDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterfaceMethodDecl" ):
                listener.enterInterfaceMethodDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterfaceMethodDecl" ):
                listener.exitInterfaceMethodDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterfaceMethodDecl" ):
                return visitor.visitInterfaceMethodDecl(self)
            else:
                return visitor.visitChildren(self)




    def interfaceMethodDecl(self):

        localctx = McFuncDSLParser.InterfaceMethodDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_interfaceMethodDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 142
                self.annotation()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 148
            self.match(McFuncDSLParser.T__3)
            self.state = 149
            self.match(McFuncDSLParser.ID)
            self.state = 150
            self.paramList()

            self.state = 151
            self.match(McFuncDSLParser.T__4)
            self.state = 152
            self.type_()
            self.state = 154
            self.match(McFuncDSLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(McFuncDSLParser.ID, 0)

        def primitiveType(self):
            return self.getTypedRuleContext(McFuncDSLParser.PrimitiveTypeContext,0)


        def getRuleIndex(self):
            return McFuncDSLParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = McFuncDSLParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_type)
        try:
            self.state = 158
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [56]:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.match(McFuncDSLParser.ID)
                pass
            elif token in [14, 15, 16, 17, 19]:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.primitiveType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(McFuncDSLParser.TypeContext)
            else:
                return self.getTypedRuleContext(McFuncDSLParser.TypeContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(McFuncDSLParser.COMMA)
            else:
                return self.getToken(McFuncDSLParser.COMMA, i)

        def getRuleIndex(self):
            return McFuncDSLParser.RULE_typeList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeList" ):
                listener.enterTypeList(self)
